AT-4269 Support multiple owners
